[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

[dependencies]
regex = "1.1.0"
rayon = "1.0.3"
aoc-runner = "0.1.0"
aoc-runner-derive = "0.1.6"
hashbrown = "0.1.7"
arrayvec = "0.4.8"
petgraph = "0.4.13"
binary-heap-plus = "0.1.4"
